--- a/OABSystem/Pages/Appointment/Create.cshtml
+++ b/OABSystem/Pages/Appointment/Create.cshtml
@@ -10,8 +10,10 @@
 <h4>Appointment</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form method="post">
+    @if (Model.Appointment == null)
+    {
+        <div class="col-md-4">
+            <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label class="control-label">Healthcare Professional</label>
@@ -43,6 +45,13 @@
             </div>
         </form>
     </div>
+    }else 
+    {
+        <div class="col-md-4">
+
+            Your appointment has been confirmed at  @Model.Appointment?.AppointmentDateTime with @Model.Appointment?.HealthcareProfessional.Name
+        </div>
+    }
 </div>
 @* 
 <div>
