--- a/OABSystem/Views/Shared/AppointmentMenu.cshtml
+++ b/OABSystem/Views/Shared/AppointmentMenu.cshtml
@@ -22,10 +22,10 @@
         {
 
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-page="/HealthCareProfessional/index">Mangae HealthCareProfessional</a>
+                <a class="nav-link text-dark" asp-area="" asp-page="/HealthCareProfessional/index">Manage HealthCareProfessional</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-page="/Appointment/index">Mangae Appointment</a>
+                <a class="nav-link text-dark" asp-area="" asp-page="/Appointment/index">Manage Appointment</a>
             </li>
 
         }
